# devcontainer-cdk-python

./: .gitignore  .swp  README.md  biome.json  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
src/function/: hello.py
src/lambdas/hello/: index.py
src/lambdas/hello/tests/: test_index.py
src/tests/: test_hello.py
